--- a/DIAN.html
+++ b/DIAN.html
@@ -29,9 +29,9 @@
         </tr>
     </table>
     <h2>Daily Activity</h2>
-    <img src="profile.jpeg" alt="Foto Tambahan" width="400" height="400">
-    <img src="daily.jpeg" alt="Foto Tambahan" width="400" height="400">
-    <img src="daily2.jpeg" alt="Foto Tambahan" width="400" height="400">
-    <img src="daily3.jpeg" alt="Foto Tambahan" width="400" height="400">
+    <img src="profile.jpeg" alt="Foto profile" width="400" height="400">
+    <img src="daily.jpeg" alt="Foto Daily" width="400" height="400">
+    <img src="daily2.jpeg" alt="Foto Daily2" width="400" height="400">
+    <img src="daily3.jpeg" alt="Foto Daily3" width="400" height="400">
 </body>
 </html>
